# blobtemplates

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.forgejo/workflows/: build-and-publish.yml
duckdb_ext/: append_metadata.py
duckdb_ext/src/: blobtemplates_duckdb.c
example/: main.c
ext/duckdb/: CMakeLists.txt  duckdb_ext  pyproject.toml  test_extension.py
ext/duckdb/blobtemplates_duckdb/: __init__.py
ext/sqlite/: CMakeLists.txt  pyproject.toml  sqlite_ext  test_extension.py
ext/sqlite/blobtemplates_sqlite/: __init__.py
include/: blobtemplates.h
python/: bindings.cpp
python/blobtemplates/: __init__.py
python/tests/: conftest.py  test_blobtemplates.py
sqlite_ext/src/: blobtemplates_sqlite.c
src/: blobtemplates_core.cpp
test/: test_duckdb.sql  test_sqlite.sql
