[build-system]
requires = ["scikit-build-core>=0.5", "nanobind>=1.5"]
build-backend = "scikit_build_core.build"

[project]
name = "blobtemplates"
version = "0.2.3"
description = "Inja templating, JMESPath, JSON diff/patch, and YAML conversion as scalar SQL functions"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = []

[project.urls]
Repository = "https://github.com/phrrngtn/blobtemplates"

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]
wheel.packages = ["python/blobtemplates"]

# trigger
