[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "blobtemplates-duckdb"
version = "0.1.1"
description = "blobtemplates DuckDB extension — loadable via LOAD command"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = []

[project.urls]
Repository = "https://github.com/phrrngtn/blobtemplates"

[tool.scikit-build]
wheel.packages = ["blobtemplates_duckdb"]
sdist.include = ["src/**", "include/**", "duckdb_ext/**"]
